<resources>
    <string name="app_name">ProWriter</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="password_654321">password = 654321</string>
    <string name="usuario_user">usuario = user</string>
    <string name="ingresar">Ingresar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
</resources>